packages/yew-macro/tests/function_component_attr/generic-props-invalid-type-parameter-fail.stderr
 error[E0412]: cannot find type `INVALID` in this scope
  --> tests/function_component_attr/generic-props-invalid-type-parameter-fail.rs:22:19
   |
22 |     html! { <Comp<INVALID> /> };
   |                   ^^^^^^^ not found in this scope
   |
help: you might be missing a type parameter
   |
20 | fn compile_fail_invalid_type_parameter<INVALID>() {
   |                                       +++++++++
